# ShowCase-Browser

./: .gitignore  MANIFEST.in  README.rst  pyproject.toml
src/showcase_browser/: args.py  communicate.py  main.py  showcase.py  versions.py  webpolicies.py
src/showcase_browser/things/: source.txt
