[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "showcase_browser"
authors = [
    {name = "Adrian F. Hoefflin", email = "srccircumflex@outlook.com"},
]
description = "Minimalistic Browser / Website to App / Showcase App"
readme = {file = "README.rst", content-type = "text/x-rst"}
requires-python = ">=3.10"
keywords = [
    "ui", "giu", "app", "showcase", "browser", "minimalistic", "website to app"
]
license = {text = "GPL v3"}
classifiers = [
    "Environment :: Console",
    "Environment :: Web Environment",
    "Environment :: X11 Applications :: Qt",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Natural Language :: English",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Desktop Environment",
    "Topic :: Internet :: WWW/HTTP :: Browsers",
]
dependencies = [
    "PyQt6>=6.7.0",
    "PyQt6-WebEngine>=6.7.0"
]
dynamic = ["version"]

[tool.setuptools.dynamic]
version = {attr = "showcase_browser.__version__"}

[project.scripts]
showcase = "showcase_browser.main:run"

[project.urls]
Homepage = "https://github.com/srccircumflex/ShowCase-Browser"
